crates/harnx-tui/src/tests/snapshots/harnx_tui__tests__tool_live_updates_tests__tool_call_inplace_update_running.snap
---
source: crates/harnx-tui/src/tests/tool_live_updates_tests.rs
expression: running_screen
---
⠋ ⌕ find [in_progress]  Finding "**/*.rs" in crates/harnx-tui  crates/harnx-tui…
pattern: '**/*.rs'



















• Input
